Change website colors

--- a/ballycroy.html
+++ b/ballycroy.html
@@ -28,11 +28,11 @@
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Ballycroy National Park</h2>
+            <h2 class="heading">Ballycroy National Park</h2>
             <p>Ballycroy National Park (or Wild Nephin National Park) is Ireland’s sixth National Park and located on the Western seaboard in northwest Mayo. It comprises of 15,000 hectares of Atlantic blanket bog and mountainous terrain, covering a vast uninhabited and unspoilt wilderness dominated by the Nephin Beg mountain range. To the west of the mountains is the Owenduff bog. This is one of the last intact active blanket bog systems in Ireland and Western Europe and is an important scientific and scenic feature of the National Park. Wild Nephin National Park is part of the Natura 2000 Network, which protects rare and important habitats and species under the EU Habitats and Birds Directive. To the east of the mountains is the Nephin Forest, which is currently mainly comprised of Sitka spruce and lodgepole pine, and was originally planted for commercial purposes. This area is now within the National Park and will be managed for biodiversity and recreation.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2343.778077126569!2d-9.825516484348645!3d54.024461631401934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4859731760fb30ed%3A0xa19189cc64843b8f!2sBallycroy%20Visitor%20Centre%20-%20Wild%20Nephin%20National%20Park!5e0!3m2!1sen!2sie!4v1667434343004!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
-        <h2 class="parks-heading">Recommended hikes</h2>
+        <h2 class="heading">Recommended hikes</h2>
         <div class="recommended">
             <div class="hike-rec">
                 <h3>Bellmullet and Ballina Road</h3>
@@ -79,7 +79,7 @@
         </div>
         
 
-        <h2 class="parks-heading">Best things to see</h2>
+        <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
                 <img src="assets/images/ballycroy/golden-plover.jpg" alt="Golden Plover (Pluvialis apricaria)" class="parks-images">
@@ -101,9 +101,8 @@
                 <img src="assets/images/ballycroy/grey-heron.jpg" alt="Grey Heron (Ardea cinerea)" class="parks-images">
                 <figcaption>Grey Heron (Ardea cinerea)</figcaption>
             </div>
-
-            <br>
-
+        </div>
+        <div class="div-parks-images">
             <div class="views-images">
                 <img src="assets/images/ballycroy/keem-beach.jpg" alt="Keem Beach" class="parks-images">
                 <figcaption>Keem Beach</figcaption>
@@ -120,9 +119,9 @@
                 <img src="assets/images/ballycroy/altaconey-river.jpg" alt="Altaconey River" class="parks-images">
                 <figcaption>Altaconey River</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div>
                 <img src="assets/images/ballycroy/scardaun-ruins.webp" alt="Scardaun Ruins" class="parks-images">
                 <figcaption>Scardaun Ruins</figcaption>
