--- a/connemara.html
+++ b/connemara.html
@@ -28,12 +28,12 @@
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Connemara National Park</h2>
+            <h2 class="heading">Connemara National Park</h2>
             <p>Situated in the West of Ireland in County Galway, Connemara National Park covers some 2,000 hectares of scenic mountains, expanses of bogs, heaths, grasslands and woodlands. Some of the Park’s mountains, namely Benbaun, Bencullagh, Benbrack and Muckanaght, are part of the famous Twelve Bens or Beanna Beola range. Connemara National Park was established and opened to the public in 1980. Much of the present Park lands formed part of the Kylemore Abbey Estate and the Letterfrack Industrial School, the remainder having been owned by private individuals. The southern part of the Park was at one time owned by Richard (Humanity Dick) Martin who helped to form the Society for the Prevention of Cruelty to Animals during the early 19th century. The Park lands are now wholly owned by the State and managed solely for National Park purpose.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2371.0858478011814!2d-9.889730584222164!3d53.53838136801077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485a2588a1ca30a5%3A0xf6d1d848f4aa37c9!2sConnemara%20National%20Park!5e0!3m2!1sen!2sie!4v1667382177485!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <h2 class="parks-heading">Recommended hikes</h2>
+        <h2 class="heading">Recommended hikes</h2>
         <div class="recommended">
             <div class="hike-rec">
                 <h3>Lower Diamond Hill Loop</h3>
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <h2 class="parks-heading">Best things to see</h2>
+        <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
                 <img src="assets/images/connemara/common-snipe.jpg" alt="Common Snipe (Gallinago gallinago)" class="parks-images">
@@ -101,9 +101,8 @@
                 <img src="assets/images/connemara/wild-goat.jpg" alt="Wild Goat (Capra aegagrus)" class="parks-images">
                 <figcaption>Wild Goat (Capra aegagrus)</figcaption>
             </div>
-
-            <br>
-
+        </div>
+        <div class="div-parks-images">
             <div class="views-images">
                 <img src="assets/images/connemara/diamond-hill.jpg" alt="View from Diamond Hill" class="parks-images">
                 <figcaption>View from Diamond Hill</figcaption>
@@ -120,9 +119,8 @@
                 <img src="assets/images/connemara/tully-mountain.webp" alt="Tully Mountain" class="parks-images">
                 <figcaption>Tully Mountain</figcaption>
             </div>
-
-            <br>
-
+        </div>
+        <div class="div-parks-images">
             <div>
                 <img src="assets/images/connemara/derryinver-bridge.jpg" alt="Derryinver Bridge" class="parks-images">
                 <figcaption>Derryinver Bridge</figcaption>
