--- a/wicklow.html
+++ b/wicklow.html
@@ -28,11 +28,11 @@
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Wicklow Mountains National Park</h2>
+            <h2 class="heading">Wicklow Mountains National Park</h2>
             <p>Wicklow Mountains National Park is situated just south of Dublin. Covering 20,483 hectares, Wicklow Mountains National Park has the distinction of being the largest of Ireland’s six National Parks. It is also the only one located in the east of the country. The National Park extends over much of the Wicklow mountains. Upland blanket bog and heath cover the upland slopes and rounded peaks. The wide open vistas are interrupted only by forestry plantations and narrow winding mountain roads. Fast-flowing streams descend into the deep lakes of the wooded valleys and continue their course into the surrounding lowlands. The primary purpose of Wicklow Mountains National Park is the conservation of biodiversity and landscape. The Park is also an invaluable recreational space for locals and visitors alike. Over one million visits are estimated to be made each year. The most visited area is the scenic Glendalough Valley where the ancient monastic settlement of St. Kevin is located. Escape from the summer crowds is possible for those coming properly equipped to explore the uplands on foot, where a sense of wilderness and isolation can readily be found.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.1711488889973!2d-6.313110184381097!3d53.14302289762259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486797cc185c87f3%3A0x681362f40c30d135!2sWicklow%20Mountains%20National%20Park!5e0!3m2!1sen!2sie!4v1667431810516!5m2!1sen!2sie" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
 
-            <h2 class="parks-heading">Recommended hikes</h2>
+            <h2 class="heading">Recommended hikes</h2>
             <div class="recommended">
                 <div class="hike-rec">
                     <h3>Miners' Road Hike</h3>
@@ -78,7 +78,7 @@
                 </div>
             </div>
         
-        <h2 class="parks-heading">Best things to see</h2>
+        <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
                 <img src="assets/images/wicklow/natterjack-toad.jpg" alt="Natterjack Toad (Epidalea calamita)" class="parks-images">
@@ -100,9 +100,9 @@
                 <img src="assets/images/wicklow/fallow-deer.jpg" alt="Fallow Deer (Dama dama)" class="parks-images">
                 <figcaption>Fallow Deer (Dama dama)</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div class="views-images">
                 <img src="assets/images/wicklow/silver-strand.jpg" alt="Silver Strand Beach" class="parks-images">
                 <figcaption>Silver Strand Beach</figcaption>
@@ -119,9 +119,9 @@
                 <img src="assets/images/wicklow/powerscourt-waterfall.jpg" alt="Powerscourt Waterfall" class="parks-images">
                 <figcaption>Powerscourt Waterfall</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div>
                 <img src="assets/images/wicklow/aghowle-church.jpg" alt="Aghowle Church" class="parks-images">
                 <figcaption>Aghowle Church</figcaption>
