--- a/burren.html
+++ b/burren.html
@@ -28,12 +28,12 @@
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Burren National Park</h2>
+            <h2 class="heading">Burren National Park</h2>
             <p>The Burren National Park is located in the southeastern corner of the Burren and is approximately 1500 hectares in size. The Park land was bought by the Government for nature conservation and public access. It contains examples of all the major habitats within the Burren: Limestone Pavement, Calcareous Grassland, Hazel scrub, Ash/Hazel Woodland, Turloughs, Lakes, Petrifying Springs, Cliffs and Fen. The word “Burren” comes from an Irish word “Boíreann” meaning a rocky place. This is an extremely appropriate name when you consider the lack of soil cover and the extent of exposed Limestone Pavement. However it has been referred to in the past as “Fertile rock” due to the mixture of nutrient rich herb and floral species. In 1651 a Cromwellian Army Officer named Ludlow remarked, “of this barony it is said that it is a country where there is not water enough to drown a man, wood enough to hang one, nor earth enough to bury them. This last is so scarce that the inhabitants steal it from one another and yet their cattle are very fat. The grass grows in tufts of earth of two or three foot square which lies between the limestone rocks and is very sweet and nourishing. The highest point in the park is Knockanes (207 metres) which continues as a curving terraced ridge to Mullaghmór to the south. East of this ridge is an area of extensive, low lying limestone pavement containing a number of semi-permanent lakes. West of this ridge the pavement sweeps down to partially drift-covered ground which gradually rises again to reach the foot of a rocky escarpment. To the south of the park the limestone bedrock disappears under a layer of glacial till. This till area is far more intensively managed for pasture and silage.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2401.308817163479!2d-9.039549284240193!3d52.99683140853402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b751955555555%3A0x36ab0a8cb452f2a8!2sBurren%20National%20Park!5e0!3m2!1sen!2sie!4v1667385249412!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
-        <h2 class="parks-heading">Recommended hikes</h2>
+        <h2 class="heading">Recommended hikes</h2>
         <div class="recommended">
             <div class="hike-rec">
                 <h3>Lough Avalla Farm Loop</h3>
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <h2 class="parks-heading">Best things to see</h2>
+        <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>            
                 <img src="assets/images/burren/brown-hairstreak.JPG" alt="Brown Hairstreak (Thecla betulae)" class="parks-images">
@@ -101,9 +101,9 @@
                 <img src="assets/images/burren/stoat.jpg" alt="Irish Stoat (Mustela erminea hibernica)" class="parks-images">
                 <figcaption>Irish Stoat (Mustela erminea hibernica)</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div class="views-images">
                 <img src="assets/images/burren/moher-cliffs.jpg" alt="Cliffs of Moher" class="parks-images">
                 <figcaption>Cliffs of Moher</figcaption>
@@ -120,9 +120,9 @@
                 <img src="assets/images/burren/aran-islands.jpg" alt="Aran Islands" class="parks-images">
                 <figcaption>Aran Islands</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div>
                 <img src="assets/images/burren/poulnabrone-dolmen.webp" alt="Poulnabrone Dolmen" class="parks-images">
                 <figcaption>Poulnabrone Dolmen</figcaption>
