--- a/glenveah.html
+++ b/glenveah.html
@@ -28,12 +28,12 @@
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Glenveah National Park</h2>
+            <h2 class="heading">Glenveah National Park</h2>
             <p>Glenveagh, meaning 'glen of the birches', is the second-largest national park in Ireland. Located in County Donegal, it includes Glenveagh Castle grounds, Lough Veagh, and much of the Derryveagh Mountains.Glenveagh National Park is a remote and hauntingly beautiful wilderness of rugged mountains, pristine lakes, tumbling waterfalls and enchanted native oak woodland in the heart of the Derryveagh Mountains in the north west of County Donegal. </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2285.1795246656407!2d-7.939875584310081!3d55.0575907528609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485f9baad6bd66ab%3A0x2f5ffa4705e86fad!2sGlenveagh%20National%20Park!5e0!3m2!1sen!2ses!4v1667344794294!5m2!1sen!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
-        <h2 class="parks-heading">Recommended hikes</h2>
+        <h2 class="heading">Recommended hikes</h2>
         <div class="recommended">
             <div class="hike-rec">
                 <h3>Glenveagh Castle easy looped walk</h3>
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <h2 class="parks-heading">Best things to see</h2>
+        <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
                 <img src="assets/images/glenveagh/smooth-newt.webp" alt="Smooth Newt (Lissotriton vulgaris)" class="parks-images">
@@ -101,9 +101,9 @@
                 <img src="assets/images/glenveagh/otter.jpg" alt="Otter (Lutra lutra)" class="parks-images">
                 <figcaption>Otter (Lutra lutra)</figcaption>
             </div>
+        </div>
 
-            <br>
-
+    <div class="div-parks-images">
             <div class="views-images">
                 <img src="assets/images/glenveagh/malin-head.jpg" alt="Malin head" class="parks-images">
                 <figcaption>Malin head</figcaption>
@@ -120,9 +120,9 @@
                 <img src="assets/images/glenveagh/slieve-league-cliffs.jpg" alt="Slieve League Cliffs" class="parks-images">
                 <figcaption>Slieve League Cliffs</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div>
                 <img src="assets/images/glenveagh/creevykeel-court-tomb.jpg" alt="Creevykeel Court Tomb" class="parks-images">
                 <figcaption>Creevykeel Court Tomb</figcaption>
