--- a/killarney.html
+++ b/killarney.html
@@ -28,12 +28,12 @@
         </nav>
 
         <div id="name">
-            <h2 class="parks-heading">Killarney National Park</h2>
+            <h2 class="heading">Killarney National Park</h2>
             <p>South and west of the town of Killarney in Co. Kerry is an expanse of rugged mountainous country. This includes the McGillycuddy’s Reeks, the highest mountain range in Ireland which rise to a height of over 1000 metres. At the foot of these mountains nestle the world famous lakes of Killarney. Here where the mountains sweep down to the lake shores, their lower slopes covered in woodlands, lies the 10,236 hectare (26,000 acres), Killarney National Park . The distinctive combination of mountains, lakes, woods and waterfalls under ever changing skies gives the area a special scenic beauty. Killarney National Park contains many features of national and international importance such as the native oakwoods and yew woods together with an abundance of evergreen trees and shrubs and a profusion of bryophytes and lichens which thrive in the mild Killarney climate. The native red deer are unique in Ireland with a presence in the country since the last Ice Age. Killarney National Park was designated as a Biosphere Reserve in 1981 by the United Nations Educational, Scientific and Cultural Organisation (UNESCO), part of a world network of natural areas which have conservation, research, education and training as major objectives.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2456.0567014805224!2d-9.5561803!3d52.0058447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48453e3ee43de413%3A0x9d8826b96949907a!2sKillarney%20National%20Park!5e0!3m2!1sen!2sie!4v1666913611513!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <h2 class="parks-heading">Recommended hikes</h2>
+        <h2 class="heading">Recommended hikes</h2>
         <div class="recommended">
             <div class="hike-rec">
                 <h3>Ross' Castle Loop</h3>
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <h2 class="parks-heading">Best things to see</h2>
+        <h2 class="heading">Best things to see</h2>
         <div class="div-parks-images">
             <div>
                 <img src="assets/images/killarney-images/killarney_butterfly.JPG" alt="Marsh Fritillary (Euphydryas aurinia)" class="parks-images">
@@ -101,9 +101,9 @@
                 <img src="assets/images/killarney-images/killarney-deer.jpg" alt="Sika Stags (Cervus nippon)" class="parks-images">
                 <figcaption>Sika Stags (Cervus nippon)</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div class="views-images">
                 <img src="assets/images/killarney-images/killarney-aghadoe.jpg" alt="View from Aghadoe" class="parks-images">
                 <figcaption>View from Aghadoe</figcaption>
@@ -120,9 +120,9 @@
                 <img src="assets/images/killarney-images/killarney-tork-mountain.jpg" alt="View from Tork Mountain" class="parks-images">
                 <figcaption>View from Tork Mountain</figcaption>
             </div>
+        </div>
 
-            <br>
-
+        <div class="div-parks-images">
             <div>
                 <img src="assets/images/killarney-images/aghadoe-ruins.jpg" alt="Aghadoe Ruins" class="parks-images">
                 <figcaption>Aghadoe Ruins</figcaption>
