--- a/ballycroy.html
+++ b/ballycroy.html
@@ -29,9 +29,14 @@
 
         <div id="name">
             <h2 class="heading">Ballycroy National Park</h2>
-            <p>Ballycroy National Park (or Wild Nephin National Park) is Ireland’s sixth National Park and located on the Western seaboard in northwest Mayo. It comprises of 15,000 hectares of Atlantic blanket bog and mountainous terrain, covering a vast uninhabited and unspoilt wilderness dominated by the Nephin Beg mountain range. To the west of the mountains is the Owenduff bog. This is one of the last intact active blanket bog systems in Ireland and Western Europe and is an important scientific and scenic feature of the National Park. Wild Nephin National Park is part of the Natura 2000 Network, which protects rare and important habitats and species under the EU Habitats and Birds Directive. To the east of the mountains is the Nephin Forest, which is currently mainly comprised of Sitka spruce and lodgepole pine, and was originally planted for commercial purposes. This area is now within the National Park and will be managed for biodiversity and recreation.</p>
+            <p>Ballycroy National Park (or Wild Nephin National Park) is Ireland’s sixth National Park and located on the Western seaboard in northwest Mayo.</p>
+            <details>
+                <summary>More Information</summary>
+                It comprises of 15,000 hectares of Atlantic blanket bog and mountainous terrain, covering a vast uninhabited and unspoilt wilderness dominated by the Nephin Beg mountain range. To the west of the mountains is the Owenduff bog. This is one of the last intact active blanket bog systems in Ireland and Western Europe and is an important scientific and scenic feature of the National Park. Wild Nephin National Park is part of the Natura 2000 Network, which protects rare and important habitats and species under the EU Habitats and Birds Directive. To the east of the mountains is the Nephin Forest, which is currently mainly comprised of Sitka spruce and lodgepole pine, and was originally planted for commercial purposes. This area is now within the National Park and will be managed for biodiversity and recreation.
+            </details> 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2343.778077126569!2d-9.825516484348645!3d54.024461631401934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4859731760fb30ed%3A0xa19189cc64843b8f!2sBallycroy%20Visitor%20Centre%20-%20Wild%20Nephin%20National%20Park!5e0!3m2!1sen!2sie!4v1667434343004!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        
+        </div>
+
         <h2 class="heading">Recommended hikes</h2>
         <div class="recommended">
             <div class="hike-rec">
@@ -99,7 +104,7 @@
             </div>
             <div>
                 <img src="assets/images/ballycroy/grey-heron.jpg" alt="Grey Heron (Ardea cinerea)" class="parks-images">
-                <figcaption>Grey Heron (Ardea cinerea)</figcaption>
+                 <figcaption>Grey Heron (Ardea cinerea)</figcaption>
             </div>
         </div>
         <div class="div-parks-images">
@@ -142,6 +147,7 @@
                 <img src="assets/images/ballycroy/slieve-carr.jpg" alt="Slieve Carr" class="parks-images">
                 <figcaption>Slieve Carr</figcaption>
             </div>
+        </div>
         </div>
 
         <footer>
