--- a/glenveah.html
+++ b/glenveah.html
@@ -29,7 +29,11 @@
 
         <div id="name">
             <h2 class="heading">Glenveah National Park</h2>
-            <p>Glenveagh, meaning 'glen of the birches', is the second-largest national park in Ireland. Located in County Donegal, it includes Glenveagh Castle grounds, Lough Veagh, and much of the Derryveagh Mountains.Glenveagh National Park is a remote and hauntingly beautiful wilderness of rugged mountains, pristine lakes, tumbling waterfalls and enchanted native oak woodland in the heart of the Derryveagh Mountains in the north west of County Donegal. </p>
+            <p>Glenveagh, meaning 'glen of the birches', is the second-largest national park in Ireland.</p>
+            <details>
+                <summary>More Information</summary>
+                Located in County Donegal, it includes Glenveagh Castle grounds, Lough Veagh, and much of the Derryveagh Mountains.Glenveagh National Park is a remote and hauntingly beautiful wilderness of rugged mountains, pristine lakes, tumbling waterfalls and enchanted native oak woodland in the heart of the Derryveagh Mountains in the north west of County Donegal. 
+            </details>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2285.1795246656407!2d-7.939875584310081!3d55.0575907528609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485f9baad6bd66ab%3A0x2f5ffa4705e86fad!2sGlenveagh%20National%20Park!5e0!3m2!1sen!2ses!4v1667344794294!5m2!1sen!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
