--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
             <table>
                 <tr>
                     <th></th>
-                    <th>January</th>
-                    <th>February</th>
+                    <th>Jan.</th>
+                    <th>Feb.</th>
                     <th>March</th>
-                    <th>April</th>
+                    <th>Apr.</th>
                     <th>May</th>
                     <th>June</th>
                     <th>July</th>
-                    <th>August</th>
-                    <th>September</th>
-                    <th>October</th>
-                    <th>November</th>
-                    <th>December</th>
+                    <th>Aug.</th>
+                    <th>Sep.</th>
+                    <th>Oct.</th>
+                    <th>Nov.</th>
+                    <th>Dec.</th>
                 </tr>
                 <tr>
                     <td><strong>Sunrise Time</strong></td>
