--- a/signup.html
+++ b/signup.html
@@ -32,15 +32,15 @@
         <div id="form-div">
             <h2>Sign Up for our Newsletter!</h2>
             <form action="https://formdump.codeinstitute.net/" method="post">
-                <div>
+                <div class="texts">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
                 </div>
-                <div>
+                <div class="texts">
                     <label for="surname">Surname:</label>
                     <input type="text" id="surname" name="surname" required>
                 </div>
-                <div>
+                <div class="texts">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
                 </div>
